--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaap's Lowlands 2024 Countdown</title>
     <style>
-        @font-face {
-          .vt323-regular {
-  font-family: "VT323", monospace;
-  font-weight: 400;
-  font-style: normal;
-}
-
-        }
-        
+        @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
         :root {
             --color-primary: #ed47d4;
             --color-secondary: #ff9c00;
