--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaap's Lowlands 2024 Countdown</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+        
         :root {
             --color-primary: #ed47d4;
             --color-secondary: #ff9c00;
