--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaap's Lowlands 2024 Countdown</title>
     <style>
-<link rel="preconnect" href="https://fonts.googleapis.com">
+           <style>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-        
-        :root {
+        </style>
+    @font-face {
+            font-family: 'Pixel';
+            src: url('path_to_pixel_font.woff2') format('woff2'),
+                 url('path_to_pixel_font.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+                :root {
             --color-primary: #ed47d4;
             --color-secondary: #ff9c00;
             --color-tertiary: #fd0;
